# t3-subscription-butler

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
contract/: Cargo.toml
contract/src/: audit.rs  audit_log.rs  billing.rs  lib.rs  types.rs
contract/wit/: world.wit
src/: hello.ts  t3n.ts
src/agent/: brain.test.ts  brain.ts  chat.ts  invoker.ts  ollama.test.ts  ollama.ts  openai.test.ts  openai.ts  provider.ts  smoke.ts  tools.ts
src/audit/: verify.test.ts  verify.ts
src/billing/: app.test.ts  app.ts  config.ts  errors.ts  server.ts  store.ts  types.ts
src/ops/: agent-setup.ts  deploy.ts  grant.ts  invoke.ts  logs.ts  state.ts  test-delegation.ts  verify-audit.ts
src/web/: app.test.ts  app.ts  events.ts  server.ts  session.test.ts  session.ts
src/web/public/: app.js  index.html  styles.css
