[package]
name = "subscription-butler"
version = "0.2.1"
edition = "2021"
description = "Subscription Butler TEE contract — audits, cancels and charges paid subscriptions against a billing API while the billing credential and card token stay sealed inside the enclave KV store."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
# In-enclave signing of audit entries (host:interfaces/signing import).
# OFF by default: the current testnet does not admit the signing capability
# for tenant contracts — a build importing it registers fine but EVERY invoke
# of the script (all versions) returns HTTP 500 until a good version is
# registered (see bug-log.md BUG-008/009). Entries degrade to
# unsigned-with-reason. Once T3 admits `signing`, build with
# `cargo build --release --features enclave-signing` and redeploy.
default = []
enclave-signing = []

[dependencies]
wit-bindgen = { version = "0.49", default-features = false, features = ["macros", "realloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
